# fast-ctc-decode

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  babel.config.js  build.rs  package-lock.json  package.json  post-install.js  pyproject.toml
.github/workflows/: #publish.yml#  build-wheels.sh  pipeline.yml  publish.yml  test.yml
src/: duplex.rs  fastexp.rs  lib.rs  search.rs  search2d.rs  tree.rs  vec2d.rs
tests/: benchmark.py  fast_ctc_wasm.test.js  index.html  test_decode.py
