[package]
name = "fast_ctc_decode"
version = "0.3.6"
authors = ["Vlado Boza <bozavlado@gmail.com>", "Chris Seymour <chris.seymour@nanoporetech.com>", "Jabari Holder <jholder@and.digital>"]
edition = "2018"

[lib]
name = "fast_ctc_decode"
crate-type = ["cdylib"]

[dependencies]
ndarray-stats = "0.5"
ndarray = { version = "0.15.3", features = ["serde"] }

# python build
pyo3 = { version = "0.19.2", features = ["extension-module"], optional = true }
numpy = { version = "0.19.0", optional = true }
indexmap = { version = "1.6.2", features = ["std"] }
proc-macro2 = "1.0.82"

# wasm build
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3.51"
js-sys = "0.3.51"
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = {version = "1.0.126", features = ["derive"]}

[features]
default = ["fastexp", "resolver", "wasm"]
wasm = []
python = ["pyo3", "numpy"]
fastexp = []
resolver = []

[profile.release]
lto=true
codegen-units=1
panic="abort"
